@@ -2,7 +2,6 @@ package com.prueba.banco.domain.services;
 
 import com.prueba.banco.domain.model.Cliente;
 import com.prueba.banco.domain.model.CuentaAhorros;
-import com.prueba.banco.domain.model.Producto;
 import com.prueba.banco.domain.ports.ClienteRepository;
 import com.prueba.banco.domain.ports.ProductoRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -13,13 +12,10 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -34,78 +30,91 @@ class ClienteServicesTest {
     @InjectMocks
     private ClienteServices clienteServices;
 
-    private Cliente clienteValido;
-    private Cliente clienteMenorEdad;
+    private Cliente cliente;
 
     @BeforeEach
     void setUp() {
-        clienteValido = new Cliente();
-        clienteValido.setId(1L);
-        clienteValido.setNombres("Juan");
-        clienteValido.setApellido("Perez");
-        clienteValido.setFechaNacimiento(LocalDate.now().minusYears(20));
-        clienteValido.setFechaCreacion(LocalDateTime.now());
-
-        clienteMenorEdad = new Cliente();
-        clienteMenorEdad.setId(2L);
-        clienteMenorEdad.setNombres("Ana");
-        clienteMenorEdad.setApellido("Gomez");
-        clienteMenorEdad.setFechaNacimiento(LocalDate.now().minusYears(17));
+        cliente = new Cliente();
+        cliente.setId(1L);
+        cliente.setNombres("Juan");
+        cliente.setApellido("Perez");
+        cliente.setFechaNacimiento(LocalDate.now().minusYears(20));
+        cliente.setEmail("juan@example.com");
     }
 
     @Test
-    void crearCliente_ClienteValido_RetornaCliente() {
-        when(clienteRepository.guardar(any(Cliente.class))).thenReturn(clienteValido);
+    void crearCliente_DatosValidos_CreaCliente() {
+        when(clienteRepository.guardar(cliente)).thenReturn(cliente);
 
-        Cliente resultado = clienteServices.crearCliente(clienteValido);
+        Cliente resultado = clienteServices.crearCliente(cliente);
 
         assertNotNull(resultado);
-        assertEquals(clienteValido.getId(), resultado.getId());
-        verify(clienteRepository, times(1)).guardar(clienteValido);
+        assertNotNull(resultado.getFechaCreacion());
+        verify(clienteRepository, times(1)).guardar(cliente);
     }
 
     @Test
-    void crearCliente_ClienteMenorEdad_LanzaExcepcion() {
+    void crearCliente_MenorDeEdad_LanzaExcepcion() {
+        cliente.setFechaNacimiento(LocalDate.now().minusYears(17));
+
         assertThrows(IllegalArgumentException.class, () -> {
-            clienteServices.crearCliente(clienteMenorEdad);
+            clienteServices.crearCliente(cliente);
         });
     }
 
     @Test
-    void actualizarCliente_ClienteExistente_ActualizaCorrectamente() {
-        when(clienteRepository.buscarPorId(1L)).thenReturn(Optional.of(clienteValido));
-        when(clienteRepository.guardar(any(Cliente.class))).thenReturn(clienteValido);
+    void crearCliente_EmailInvalido_LanzaExcepcion() {
+        cliente.setEmail("emailinvalido");
 
-        Optional<Cliente> resultado = clienteServices.actualizarCliente(1L, clienteValido);
-
-        assertTrue(resultado.isPresent());
-        verify(clienteRepository, times(1)).guardar(clienteValido);
+        assertThrows(IllegalArgumentException.class, () -> {
+            clienteServices.crearCliente(cliente);
+        });
     }
 
     @Test
-    void actualizarCliente_ClienteNoExiste_RetornaVacio() {
-        when(clienteRepository.buscarPorId(99L)).thenReturn(Optional.empty());
+    void actualizarCliente_ClienteExiste_ActualizaCorrectamente() {
 
-        Optional<Cliente> resultado = clienteServices.actualizarCliente(99L, clienteValido);
+        cliente.setFechaNacimiento(LocalDate.now().minusYears(25));
 
-        assertFalse(resultado.isPresent());
+        Cliente actualizado = new Cliente();
+        actualizado.setNombres("Juan Actualizado");
+        actualizado.setApellido("Perez");
+        actualizado.setFechaNacimiento(LocalDate.now().minusYears(25)); // Fecha de nacimiento requerida
+        actualizado.setEmail("juan.actualizado@example.com");
+        actualizado.setTipoIdentificacion("CC");
+        actualizado.setNumeroIdentificacion("123456789");
+
+        when(clienteRepository.buscarPorId(1L)).thenReturn(Optional.of(cliente));
+        when(clienteRepository.guardar(cliente)).thenReturn(cliente);
+
+        Optional<Cliente> resultado = clienteServices.actualizarCliente(1L, actualizado);
+
+        assertTrue(resultado.isPresent());
+        assertEquals("Juan Actualizado", resultado.get().getNombres());
+        assertNotNull(resultado.get().getFechaModificacion());
     }
 
     @Test
     void eliminarCliente_SinProductos_EliminaCorrectamente() {
-        when(clienteRepository.buscarPorId(1L)).thenReturn(Optional.of(clienteValido));
-        when(productoRepository.listarPorCliente(clienteValido)).thenReturn(Collections.emptyList());
+        when(clienteRepository.buscarPorId(1L)).thenReturn(Optional.of(cliente));
+        when(productoRepository.listarPorClienteId(1L)).thenReturn(List.of());
 
         clienteServices.eliminarCliente(1L);
 
-        verify(clienteRepository, times(1)).eliminar(clienteValido);
+        verify(clienteRepository, times(1)).eliminar(cliente);
     }
 
+
     @Test
-    void eliminarCliente_ConProductosVinculados_LanzaExcepcion() {
-        Producto cuenta = new CuentaAhorros();
-        when(clienteRepository.buscarPorId(1L)).thenReturn(Optional.of(clienteValido));
-        when(productoRepository.listarPorCliente(clienteValido)).thenReturn(List.of(cuenta));
+    void eliminarCliente_ConProductos_LanzaExcepcion() {
+        when(clienteRepository.buscarPorId(1L)).thenReturn(Optional.of(cliente));
+
+        CuentaAhorros cuenta = new CuentaAhorros();
+        cuenta.setId(1L);
+        cuenta.setNumeroCuenta("5312345678");
+        cuenta.setClienteId(1L);
+
+        when(productoRepository.listarPorClienteId(1L)).thenReturn(List.of(cuenta));
 
         assertThrows(IllegalStateException.class, () -> {
             clienteServices.eliminarCliente(1L);
